fixed image overflow

--- a/src/Components/Cards/CardsMain.css
+++ b/src/Components/Cards/CardsMain.css
@@ -27,11 +27,9 @@ body {
   
   .grid > article img {
    /* image fits into card */
-    width : 100%; 
-    border-top-left-radius: 20px; 
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+   min-width: 100%;
+ height: 70px;
+ border-radius: 20px;
   }
   
   .text {
